fix: make trips and trip pages look better on smaller screens

--- a/frontend/src/Components/Header/Header.css
+++ b/frontend/src/Components/Header/Header.css
@@ -71,6 +71,7 @@
     top: 13px;
     left: 15px;
     cursor: pointer;
+    font-size: 2rem;
 }
 
 .hamburger_navbar{
